ProdIND/ProdPrograms/force-app/main/default/objects/Biometric_Input_Values__mdt/Biometric_Input_Values__mdt.object-meta.xml
<CustomObject>
    <label>Biometric Input Values</label>
    <pluralLabel>Biometric Input Values</pluralLabel>
</CustomObject>