ProdIND/ProdPrograms/force-app/main/default/objects/Biometric_Input_Values__mdt/fields/env__c.field-meta.xml
<CustomField>
    <fullName>env__c</fullName>
    <label>env</label>
    <length>20</length>
    <type>Text</type>
</CustomField>