ProdIND/ProdPrograms/force-app/main/default/objects/Biometric_Input_Values__mdt/fields/fCount__c.field-meta.xml
<CustomField>
    <fullName>fCount__c</fullName>
    <label>fCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>