ProdIND/ProdPrograms/force-app/main/default/objects/Biometric_Input_Values__mdt/fields/format__c.field-meta.xml
<CustomField>
    <fullName>format__c</fullName>
    <label>format</label>
    <length>20</length>
    <type>Text</type>
</CustomField>