ProdIND/ProdPrograms/force-app/main/default/objects/Biometric_Input_Values__mdt/fields/fType__c.field-meta.xml
<CustomField>
    <fullName>fType__c</fullName>
    <label>fType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>