ProdIND/ProdPrograms/force-app/main/default/objects/Biometric_Input_Values__mdt/fields/pidver__c.field-meta.xml
<CustomField>
    <fullName>pidver__c</fullName>
    <label>pidver</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>