ProdIND/ProdPrograms/force-app/main/default/objects/Biometric_Input_Values__mdt/fields/str_wadh__c.field-meta.xml
<CustomField>
    <fullName>str_wadh__c</fullName>
    <label>str wadh</label>
    <length>20</length>
    <type>Text</type>
</CustomField>