ProdIND/ProdPrograms/force-app/main/default/objects/Biometric_Input_Values__mdt/fields/wadhType__c.field-meta.xml
<CustomField>
    <fullName>wadhType__c</fullName>
    <label>wadhType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>